#1135972 by kylebrowning, voxpelli: Port to Drupal 7

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,3 @@
-Services Views 6.x-1.0, xxxx-xx-xx
+Services Views 7.x-1.0, xxxx-xx-xx
 ------------------------------
-#1042766 by dragonwize, kylebrowning, voxpelli: Port 2.x to 3.x lazily
+#1135972 by kylebrowning, voxpelli: Port to Drupal 7
